--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "fs": "0.0.1-security",
+    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-order": "^1.1.1",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.0",
+    "merge-stream": "^1.0.1",
     "pug": "^2.0.0-beta11"
   },
   "devDependencies": {
