--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "gulp-order": "^1.1.1",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sync": "^0.1.4",
     "gulp-uglify": "^2.1.0",
     "merge-stream": "^1.0.1",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta11",
+    "run-sequence": "^1.2.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
